[gd_scene load_steps=3 format=2]

[ext_resource path="res://Resources/Themes/DefaultTheme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/UI/SettingsDialog.gd" type="Script" id=2]

[node name="SettingsDialog" type="WindowDialog"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -48.0
margin_bottom = -112.0
mouse_filter = 2
theme = ExtResource( 1 )
popup_exclusive = true
window_title = "Settings"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 16.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 88.0
custom_constants/vseparation = 8
custom_constants/hseparation = 16
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterVolumeLabel" type="Label" parent="GridContainer"]
margin_top = 4.0
margin_right = 168.0
margin_bottom = 12.0
text = "Master Volume:"

[node name="MasterVolumeSlider" type="HSlider" parent="GridContainer"]
margin_left = 184.0
margin_right = 304.0
margin_bottom = 16.0
size_flags_horizontal = 3

[node name="SFXVolumeLabel" type="Label" parent="GridContainer"]
margin_top = 28.0
margin_right = 168.0
margin_bottom = 36.0
text = "Sound Effects Volume:"

[node name="SFXVolumeSlider" type="HSlider" parent="GridContainer"]
margin_left = 184.0
margin_top = 24.0
margin_right = 304.0
margin_bottom = 40.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolumeLabel" type="Label" parent="GridContainer"]
margin_top = 52.0
margin_right = 168.0
margin_bottom = 60.0
text = "Music Volume:"

[node name="MusicVolumeSlider" type="HSlider" parent="GridContainer"]
margin_left = 184.0
margin_top = 48.0
margin_right = 304.0
margin_bottom = 64.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="GridContainer"]
margin_top = 72.0
margin_right = 48.0
margin_bottom = 88.0
size_flags_horizontal = 0
disabled = true
text = "Save"

[node name="CancelButton" type="Button" parent="GridContainer"]
margin_left = 184.0
margin_top = 72.0
margin_right = 248.0
margin_bottom = 88.0
size_flags_horizontal = 0
text = "Cancel"

[connection signal="pressed" from="GridContainer/SaveButton" to="." method="onSaveButtonPressed"]
[connection signal="pressed" from="GridContainer/CancelButton" to="." method="onCancelButtonPressed"]
